--- a/summit.html
+++ b/summit.html
@@ -80,11 +80,11 @@
 		
 		<div class="col-lg-12">
 		<div id="doul" class="ivm">
-		<img src="assets/img/summit.png" id="ivm_frame">
+		<img src="assets/img/dientsummit.jpg" id="ivm_frame">
 		<div class="ivm_zrame">
 		<img src="assets/img/add.png" id="ivm_add" style="width: 100%;">
 		</div>
-		<div id="ivm_igar" style="width: 30%; height: 8%;  position: absolute; left: 1.5%; bottom: 19%; display: inline;">
+		<div id="ivm_igar" style="width: 30.6%; height: 6.6%;  position: absolute; left: 6.4%; bottom: 15.6%; display: inline;">
 		Your Name Here
 		</div>
 		</div>
